static/scss/partials/dashboard.scss
.mpp-dashbaord-header {
    background-color: white;
    margin-bottom: 1rem;
}

.mpp-dashbaord-header-name {
    font-weight: 700;
    span {
        font-weight: 400;
        display: block;
    }
}

.mpp-dashbaord-header-container {
  max-width: var(--dashboardMaxWith);
  margin: auto;
  padding: 2rem 1.5rem;
}

.mpp-dashbaord-header-title {
    margin-bottom: 2rem;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    flex-wrap: wrap;
}

.mpp-dashbaord-header-stats {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    width: 100%;
    align-items: stretch;
    flex-direction: row;
}

.mpp-dashbaord-header-stats li {
    padding: 0 0.25rem;
    border-right: 1px solid #ECECEC;
    width: 100%;
    span {
        display: block;
        text-align: center;
        font-size: 2rem;
        font-weight: 800;
    }
    .label {
        font-size: 1rem;
        display: block;
        color: #666666;
        line-height: 1rem;
        font-weight: 400;
        margin-bottom: 0.25rem;
    }
    &:last-child {
        border-right: 0;
    }
}

.mpp-action-link {
  color: $color-blue-50;
  appearance: none;
  background: none;
  border: none;
  outline: none;
  display: flex;
  align-items: center;
  .margin-right {
      margin-right: 0.25rem;
  }
  .margin-left {
      margin-left: 0.25rem;
  }
  &:hover {
      color: var(--blue4);
  }
}

.mpp-action-tooltip-hover {
    display: none;
    position: absolute;
    padding-top: 10px;
    top: calc(100%);
    left: 4rem;
    min-width: 200px;
}

.mpp-action-tooltip-hover-wrapper {
        background-color: white;
        box-shadow: var(--dropShadowLight);
        border-radius: 4px;
        position: relative;
        color: var(--ink);
        padding: 1rem;
        &:after{
            content: "";
            display: block;
            position: absolute;
            background-color: white;
            left: 2rem;

            // TODO: Fix shadow on bubble triangle
            // box-shadow: -2px 2px 2px 0 #3d3f4740;
            content: "\00a0";
            display: block;
            height: 20px;
            position: absolute;
            
            top: -10px;
            transform:             rotate( 135deg );
                -moz-transform:    rotate( 135deg );
                -ms-transform:     rotate( 135deg );
                -o-transform:      rotate( 135deg );
                -webkit-transform: rotate( 135deg );
            width:  20px;
        }
    }

.mpp-action-tooltip {
    position: relative;
    z-index: 1;
    
    &:hover .mpp-action-tooltip-hover {
        display: block;
    }
}


@media screen and (min-width: 768px) {
    .mpp-dashbaord-header-container {
        display: flex;
        align-items: flex-end;
        justify-content: space-between;
    }    
    .mpp-dashbaord-header-title {
        width: 25%;   
        flex-grow: 2;
        margin-bottom: 0;
        display: block;
    }
    .mpp-dashbaord-header-stats {
        width: auto;
        flex-shrink: 2;
        li {
            padding: 0 1rem;
            width: auto;
        }
        .label {
            white-space: nowrap;
        }
    }
    .mpp-dashbaord-header-name {
        margin-bottom: 1rem;
    }
}

// Alias Card
.c-alias {
    background-color: rgba($color-white, 0.5);
    border-radius: $border-radius-md;
    padding: $spacing-md $spacing-md 0;
    box-shadow: $box-shadow-sm;
    margin-bottom: $spacing-lg;
    &.is-enabled {
        background-color: $color-white;
    }
}

.c-alias-main-info {
    min-height: $layout-sm;
    display: flex;
    
    @media #{$mq-md} {
        margin-bottom: $spacing-md;
        // align-items: center;
    }
}

// .c-alias-toggle {
//     margin-bottom: $spacing-xs;
//     @media #{$mq-md} {
//         margin-bottom: 0;
//     }
// }

.c-alias-name {
    margin-left: $spacing-xs;

    .relay-address {
        display: none;
    }

    input {
        text-overflow: ellipsis;
    }

    @media #{$mq-md} {
        .relay-address {
            display: block;
        }

        margin-left: 0;
    }
}

.c-alias-copy {
    display: block;
    padding: $spacing-sm 0 $spacing-md;
    @media #{$mq-md} {
        display: none;
    }
}

.c-alias-stats {
    display: none;
    @media #{$mq-md} {
        margin-right: $spacing-md;
        display: flex;
    }
}

.c-alias-meta {
    display: flex;
    margin-left: auto;
}

.c-alias-additional-info {
    border-top: 1px solid transparent;
    overflow: hidden;
    max-height: 0;
    transition: all 0.2s ease-out;
    
    @media #{$mq-sm} {
        display: flex;
    }

    &.is-visible {
        border-color: $color-light-gray-30;
        max-height: 900px;
        padding:  $spacing-md 0;
    }
}

.c-alias-toggle-button {
    transition: transform 0.2s ease-out;
    margin: auto 0;
    &.is-active {
        transform: rotate(180deg);
    }
}

.c-alias-data-collection {
    @media #{$mq-sm} {
        display: flex;
        flex-wrap: wrap;
    }
    @media #{$mq-sm} {
        flex-wrap: nowrap;
        justify-content: flex-start;
    }
}

.c-alias-data {
    display: flex;
    align-items: center;
    line-height: normal;
    & + .c-alias-data {
        margin-top: $spacing-sm;
        @media #{$mq-sm} {
            margin-top: 0;
            margin-left: $spacing-xl;
        }
    }
    span {
        display: block;
    }
    .c-alias-data-label {
        color: $color-dark-gray-05;
        @include text-body-xs;
    }
    .c-alias-data-value {
        @include text-body-md;
        text-overflow: ellipsis;
    }
    &.created-by {
        img {
            height: 1.5rem;
        }
    }
    img {
        display: none;
        height: 1rem;
        @media #{$mq-md} {
            display: block;
            margin-right: $spacing-md;
        }
    }
}

.delete-relay-email-button {
    width: 100%;
    justify-content: center;
    outline: none !important;
    border: 1px solid transparent;
    background-color: $color-mpp-background;
    border-radius: $border-radius-sm;
    height: 36px;
    padding-right: $spacing-md;
    padding-left: $spacing-md;
    display: flex;
    align-items: center;
    color: $color-blue-50;
    &:hover, &:focus {
        border-color: $color-blue-50;
        box-shadow: $box-shadow-mpp-sm;
    }
    &:active {
        box-shadow: none;
        background-color: $color-white;
    }
    span {
        @include text-body-sm;
        font-weight: 500;
    }

    @media #{$mq-sm} {
        width: auto;
        justify-content: flex-start;
    }

}

